# nocruft

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/nocruft/: Cargo.toml  build.rs
crates/nocruft-bpf/src/: nocruft.bpf.c  vmlinux.h
crates/nocruft/src/: bpf_events.rs  caps.rs  cli.rs  main.rs  output.rs  pathres.rs
crates/nocruft/tests/: integration.rs
