[package]
name = "nocruft"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux-only CLI that traces filesystem creations under a nix-shell via eBPF"

[[bin]]
name = "nocruft"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
glob = "0.3"
libc = "0.2"
libbpf-rs = "0.24"
path-clean = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
libbpf-cargo = "0.24"
